--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-DB_URL = "mongodb+srv://shareandcare:OULBt9WCCFBlq6Nz@shareandcare.giipswc.mongodb.net/?retryWrites=true&w=majority&appName=test"
+DB_URL = "mongodb+srv://shareandcare:OULBt9WCCFBlq6Nz@shareandcare.giipswc.mongodb.net/MTSE"
 SECRET = Shareandcare
 cloud_name = shareandcare
 api_key = 184461733383647
